<resources>
    <string name="app_name">Practicum-Android-Diploma</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--строки экрана вакансия "Поиск вакансий" (search)-->
    <string name="search_search_of_vacancy">Поиск вакансий</string>
    <string name="search_enter_a_request">Введите запрос</string>
    <string name="search_no_list_of_vacancies">Не удалось получить\n список вакансий</string>
    <string name="search_no_vacancies">Таких вакансий нет</string>
    <string name="search_founded_n_vacancies">Таких вакансий нет</string>
    <plurals name="search_founded_n_vacancies">
        <item quantity="zero">Найдено %d вакансий</item>
        <item quantity="one">Найдена %d вакансия</item>
        <item quantity="two">Найдено %d вакансии</item>
        <item quantity="few">Найдено %d вакансий</item>
        <item quantity="many">Найдено %d вакансий</item>
        <item quantity="other">Найдено %d вакансий</item>
    </plurals>
    <string name="search_no_connection">Нет интернета</string>
    <string name="search_server_error">Ошибка сервера</string>
    <string name="search_salary_not_specified">Зарплата не указана</string>
    <!--строки экранов "Фильтрация"(filter)-->
    <string name="filter_filter_settings">Настройки фильтрации</string>
    <string name="filter_job_location">Место работы</string>
    <string name="filter_industry">Отрасль</string>
    <string name="filter_expected_salary">Ожидаемая зарплата</string>
    <string name="filter_enter_the_amount">Введите сумму</string>
    <string name="filter_do_not_show_without_a_salary">Не показывать без зарплаты</string>
    <string name="filter_select_a_job_location">Выбор места работы</string>
    <string name="filter_country">Страна</string>
    <string name="filter_region">Регион</string>
    <string name="filter_select_a_country">Выбор страны</string>
    <string name="filter_select_a_region">Выбор региона</string>
    <string name="filter_there_is_no_such_region">Такого региона нет</string>
    <string name="filter_unable_to_retrieve_the_list">Не удалось получить список</string>
    <string name="filter_select_industry">Выбор отрасли</string>
    <string name="filter_input_industry">Ввведите отрасль</string>
    <string name="filter_select">Выбрать</string>
    <string name="filter_apply">Применить</string>
    <string name="filter_reset">Сбросить</string>
    <!--строки экрана вакансия(vacancy)-->
    <string name="vacancy_vacancy">Вакансия</string>
    <string name="vacancy_The_vacancy_was_not_found_or_deleted">Вакансия не найдена или удалена</string>
    <string name="vacancy_server_error">Ошибка сервера</string>
    <string name="vacancy_experience">Требуемый опыт</string>
    <string name="vacancy_schedule">График работы</string>
    <string name="vacancy_employment">Занятость</string>
    <string name="vacancy_contacts">Контакты:</string>
    <string name="vacancy_contacts_email">e-mail:</string>
    <string name="vacancy_contacts_phones">Контактный телефон:</string>
    <string name="vacancy_contacts_num">Требуемый опыт</string>
    <string name="vacancy_skills">Ключевые навыки</string>
    <string name="vacancy_email_title">Ссылка на вакансию</string>
    <string name="vacancy_share_with_help">Поделиться с помощью</string>
    <!--строки экрана Избранное(favourites)-->
    <string name="favourites_favourites">Избранное</string>
    <string name="favourites_the_list_is_empty">Список пуст</string>
    <string name="favourites_couldnt_get_a_list_of_vacancies">Не удалось получить список вакансий</string>
    <!--строки contentDescription-->
    <string name="description_back">Назад</string>
    <string name="description_home">Домой</string>
    <string name="description_recent">Недавнее</string>
    <string name="team_team">Наша команда:\n - Александр Попов\n - Евгений Устюжанин</string>
</resources>
