<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <ImageView
        android:id="@+id/imageMask"
        android:layout_width="46dp"
        android:layout_height="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="7dp"
        app:srcCompat="@drawable/ic_mask_46dp"/>
    <ImageButton
        android:id="@+id/buttonGoBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:srcCompat="@drawable/ic_arrow_back_24dp"
        android:background="@null"
        android:scaleType="center"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="4dp"/>
    <TextView
        android:id="@+id/textScreenTitle"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:text="@string/filter_select_industry"
        style="@style/Medium_YS_Display_22sp_black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="56dp"
        android:layout_marginTop="43dp"/>
    <EditText
        android:id="@+id/editWantedIndustry"
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="96dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_field_gray_12dp"
        android:paddingStart="16dp"
        android:paddingEnd="68dp"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:hint="@string/filter_input_industry"
        android:textColorHint="@color/HH_Gray"
        style="@style/Regular_YS_Display_16sp_black"
        android:singleLine="true"
        android:textCursorDrawable="@drawable/ic_cursor_22dp"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:lines="1"
        android:maxLength="50"/>
    <ImageButton
        android:id="@+id/buttonClearIndustryInput"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:srcCompat="@drawable/ic_search_24dp"
        android:background="@null"
        android:scaleType="center"
        app:layout_constraintTop_toTopOf="@id/editWantedIndustry"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="@id/editWantedIndustry"
        android:layout_marginEnd="4dp"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/industryRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="168dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
    <TextView
        android:id="@+id/buttonApplyIndustryFilter"
        android:layout_width="0dp"
        android:layout_height="59dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="17dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="17dp"
        android:background="@drawable/rounded_field_blue_12dp"
        android:text="@string/filter_select"
        android:textAllCaps="false"
        style="@style/Medium_YS_Display_16sp_black"
        android:textColor="@color/HH_White"
        android:gravity="center"
        android:visibility="gone"
        tools:visibility="visible"/>
</androidx.constraintlayout.widget.ConstraintLayout>
