<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <ImageView
        android:id="@+id/imageMask"
        android:layout_width="46dp"
        android:layout_height="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="7dp"
        app:srcCompat="@drawable/ic_mask_46dp"/>
    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:text="@string/favourites_favourites"
        style="@style/Medium_YS_Display_22sp_black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="43dp"/>
    <ProgressBar android:id="@+id/progressBar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="374dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:indeterminateTint="@color/HH_Blue"
        android:visibility="gone"
        tools:visibility="visible"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerFavourites"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="104dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:visibility="gone"
        tools:visibility="visible"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutNoVacancy"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="88dp"
        android:visibility="gone"
        tools:visibility="visible">
        <ImageView
            android:id="@+id/imageNoVacancy"
            android:layout_width="328dp"
            android:layout_height="223dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="171dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_gravity="end|center_vertical"
            android:scaleType="center"
            app:srcCompat="@drawable/pic_favorite_scroll_empty_328dp"/>
        <TextView
            android:layout_width="268dp"
            android:layout_height="wrap_content"
            android:text="@string/favourites_the_list_is_empty"
            style="@style/Medium_YS_Display_22sp_black"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/imageNoVacancy"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@id/imageNoVacancy"
            android:layout_marginStart="30dp"
            app:layout_constraintEnd_toEndOf="@id/imageNoVacancy"
            android:layout_marginEnd="30dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutLoadError"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="88dp"
        android:visibility="gone"
        tools:visibility="gone">
        <ImageView
            android:id="@+id/imageLoadError"
            android:layout_width="328dp"
            android:layout_height="223dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="171dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_gravity="end|center_vertical"
            android:scaleType="center"
            app:srcCompat="@drawable/pic_nothing_found_328dp"/>
        <TextView
            android:layout_width="268dp"
            android:layout_height="wrap_content"
            android:text="@string/favourites_couldnt_get_a_list_of_vacancies"
            style="@style/Medium_YS_Display_22sp_black"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/imageLoadError"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@id/imageLoadError"
            android:layout_marginStart="30dp"
            app:layout_constraintEnd_toEndOf="@id/imageLoadError"
            android:layout_marginEnd="30dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
